# dyna

./: .coveragerc  .gitignore  .gitmodules  LICENSE.INFO  Makefile  README  README.md  debug  dyna  dyna-doctest  dyna.cabal  run-doctests.py
docs/: TODO  TODO.LSA
docs/sphinx/: Makefile  bib.rst  conf.py  index.rst
docs/sphinx/_themes/bootstrap/: theme.conf
docs/sphinx/_themes/bootstrap/static/: bootstrap-sphinx.js
docs/sphinx/manual/: builtins.rst  index.rst  pragmas.rst
docs/sphinx/spec/: glossary.rst  index.rst  pragmas.rst  syntax.rst  type-system.rst
docs/sphinx/tutorial/: darcey.rst  dijkstra.rst  errors.rst  hello.rst  index.rst
examples/: agg-conflict.dyna  boxes.dyna  cky.dyna  colonequals.dyna  dijkstra-backpointers.dyna  dijkstra-backpointers2.dyna  dijkstra-euclid.dyna  dijkstra.dyna  equalities.dyna  errors.dyna  factorial-bc.dyna  fib-bc.dyna  fib-limit.dyna  fib.dyna  force.dyna  forward-backward.dyna  geom.dyna  helloworld.dyna  icecream.dyna  lang-model.dyna  lists.dyna  markov2.dyna  matrixops.dyna  nonlinear.dyna  papa.dyna  papa2.dyna  peano.dyna  perverse.dyna  ptb.dyna  row.dyna  sigmoid.dyna  simple.dyna  string-quote.dyna  trace.dyna
examples/expected/: dijkstra-backpointers.py.out  dijkstra.py.out  equalities.py.out  factorial-bc.py.out  fib-limit.py.out  geom.py.out  lists.py.out  matrixops.py.out  papa2.py.out  simple.py.out
misc/: HaddockPaths.hs  crash-summary.py  dyna-doctest.py  ghc-bootstrap.sh  template.hs  vimrc
src/Dyna/: NormalizeParse.hs  REPL.hs
src/Dyna/Analysis/: ANF.hs  ANFPretty.hs  ANFSelftest.hs  Aggregation.hs  Base.hs  DOpAMine.hs  Mode.hs  NormalizeParse.hs  NormalizeParseSelftest.hs  QueryProcTable.hs  RuleMode.hs  RuleModeTest.hs  UpdateProcTable.hs
src/Dyna/Analysis/Automata/: Class.hs  NamedAut.hs  Utilities.hs
src/Dyna/Analysis/Mode/: Det.hs  Inst.hs  InstMap.hs  InstPretty.hs  InstSelftest.hs  Mode.hs  Selftest.hs  Unification.hs  Uniq.hs
src/Dyna/Analysis/Mode/Execution/: Base.hs  Context.hs  ContextNoAlias.hs  Functions.hs  FunctionsNoAlias.hs  NamedInst.hs  NoAliasContext.hs  NoAliasFunctions.hs
src/Dyna/Analysis/Mode/Selftest/: Contexts.hs  NamedInst.hs  Term.hs
src/Dyna/Backend/: BackendDefn.hs  Backends.hs  Debugging.hs  NoBackend.hs  PrimModes.hs  Primitives.hs  Python.hs
src/Dyna/Backend/K3/: AST.hs  Automation.hs  CollectDecls.hs  Examples.hs  Render.hs  Selftest.hs
src/Dyna/Backend/Python/: Backend.hs  Selftest.hs  aggregator.py  chart.py  config.py  debug.py  defn.py  draw_circuit.py  dyna-doctest.py  dyna_doctest.py  dynac.py  errors.py  graph.py  interpreter.py  load.py  loadmat.py  main.py  prioritydict.py  repl.py  save.py  sexpr.py  stdlib.py  term.py  tsv.py  unify.py  utils.py
src/Dyna/Backend/Python/load/: __init__.py  matrix.py  pickled.py  sexpr.py  tsv.py
src/Dyna/Backend/Python/post/: __init__.py  draw.py  draw_circuit.py  dump_chart.py  dump_solution.py  graph.py  save.py  trace.py
src/Dyna/BackendK3/: AST.hs  Automation.hs  CollectDecls.hs  Examples.hs  Render.hs  Selftest.hs  Stdlib.hs
src/Dyna/Main/: BackendDefn.hs  Defns.hs  Driver.hs  Exception.hs  TestsDriver.hs
src/Dyna/ParserHS/: OneshotDriver.hs  Parser.hs  ParserSelftest.hs  Printer.hs  Selftest.hs  Syntax.hs  SyntaxTheory.hs  Types.hs
src/Dyna/Term/: Normalized.hs  SurfaceSyntax.hs  TTerm.hs
src/Dyna/Test/: Main.hs  Main2.hs  Trifecta.hs
src/Dyna/XXX/: DataUtils.hs  HList.hs  HaddockPaths.hs  MonadContext.hs  MonadUtils.hs  PPrint.hs  README  THTuple.hs  THTupleInternals.hs  TestFramework.hs  Trifecta.hs  TrifectaTest.hs  TrifectaTests.hs
src/Dyna/XXX/Automata/: Class.hs  Examples.hs  FixAut.hs  NOTES  NamedAut.hs  RecClass.hs  ReprClass.hs  TODO  Utilities.hs
test/app/: ptb.dynadoc
test/error-handling/: basics.dynadoc  bc.dynadoc  clearing.dynadoc  clearing2.dynadoc
test/known-failures/: retract-to-inf.dynadoc
test/misc/: retract-bc.dynadoc
test/repl/: add-bc.dynadoc  aggregator-conflict  aggregator-conflict.dynadoc  aggregator-conflict.expect  aggregators.dynadoc  alist.dynadoc  boolean-aggregators.dynadoc  boolean-ops.dynadoc  colon-equals.doctest  colon-equals.dynadoc  english.par  equals-errors.dynadoc  error.dynadoc  issue52-2.dynadoc  issue52.dynadoc  late-aggregator-assignment  late-aggregator-assignment.dynadoc  late-aggregator-assignment.expect  late-bc.dynadoc  list.dynadoc  load.bash  load.dyna  load.dynadoc  papa.gr  post.dynadoc  recursion-limit.dynadoc  repl-misc.dynadoc  retract-aggregator.dynadoc  retract-bc-2.dynadoc  retract-bc-3.dynadoc  retract-bc.dynadoc  retract-rule  retract-rule.doctest  retract-rule.dynadoc  retract-rule.expect  sentences.txt  trace.dynadoc
test/repl/data/: english.gr  english.par  english.sen
