----------------------------------------------------------------

Name:           dyna
Version:        0.4
Cabal-Version:  >=1.14
Build-Type:     Simple
Stability:      alpha
Copyright:      Copyright (c) 2007--2012,
                      Nathaniel W. Filardo, wren ng thornton
License:        OtherLicense
License-File:   LICENSE
Author:         Nathaniel W. Filardo, wren ng thornton
Maintainer:     haskell@dyna.org
Homepage:       http://www.dyna.org/
Category:       Compilers/Interpreters
Synopsis:       Interpreter for the Dyna language
Description:    A weighted logic programming language for dynamic
                programming and natural language processing. Features
                include memoization, both forward- and backward-chaining,
                and namespace modularity.

Library
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    ghc-options:        -Wall


    Exposed-Modules:    Dyna.BackendK3.AST,
                        Dyna.BackendK3.Automation,
                        Dyna.BackendK3.Render
                        Dyna.ParserHS.Parser,
                        Dyna.NormalizeParse,
                        Dyna.XXX.Trifecta

    Build-Depends:      base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        ghc-prim,
                        mtl >=2.1,
                        parsers >=0.3,
                        reducers >=3.0,
                        semigroups >=0.8,
                        template-haskell,
                        trifecta >=0.90,
                        unification-fd,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0

Executable drepl
    Default-Language:   Haskell2010

    ghc-options:        -Wall
                        -main-is Dyna.REPL

    Hs-Source-Dirs:     src
    Build-Depends:      base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        haskeline >=0.6,
                        mtl >=2.1,
                        parsers >=0.3,
                        reducers >=3.0,
                        semigroups >=0.8,
                        trifecta >=0.90,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0
    
    Main-Is: Dyna/REPL.hs

Test-suite dyna-selftests
    type:               exitcode-stdio-1.0
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    ghc-options:        -Wall
                        -main-is Dyna.Test.Main

    Build-Depends:      base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        ghc-prim,
                        HUnit >=1.2,
                        mtl >=2.1,
                        parsers >=0.3,
                        reducers >=3.0,
                        semigroups >=0.8,
                        template-haskell,
                        test-framework >=0.6,
                        test-framework-hunit >=0.2,
                        test-framework-th >=0.2,
                        trifecta >=0.90,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0

    Other-Modules:      Dyna.BackendK3.Examples

    Main-Is: Dyna/Test/Main.hs


----------------------------------------------------------------
----------------------------------------------------------- fin.
