Name:           dyna
Version:        0.4
Cabal-Version:  >=1.14
Build-Type:     Simple
Stability:      alpha
Copyright:      Copyright (c) 2007-2012,
                      Nathaniel W. Filardo, Tim Vieira, wren ng thornton
License:        OtherLicense
License-File:   LICENSE
Author:         Nathaniel W. Filardo, Tim Vieira, wren ng thornton
Maintainer:     haskell@dyna.org
Homepage:       http://www.dyna.org/
Category:       Compilers/Interpreters
Synopsis:       Interpreter for the Dyna language
Description:    A weighted logic programming language for dynamic
                programming and natural language processing. Features
                include memoization, both forward- and backward-chaining,
                and namespace modularity.

source-repository head
    type: git
    location: git://github.com/nwf/dyna.git

Library
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    ghc-options:        -Wall


    Exposed-Modules:    Dyna.Analysis.ANF,
                        Dyna.Analysis.ANFPretty,
                        Dyna.Analysis.Mode,
                        Dyna.Backend.BackendDefn,
                        Dyna.Main.Exception,
                        Dyna.ParserHS.Parser,
                        Dyna.XXX.Trifecta

    Build-Depends:      ansi-wl-pprint >= 0.6,
                        base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        either >= 3.4,
                        ghc-prim,
                        HUnit >=1.2,
                        mtl >=2.1,
                        lens >=3.8,
                        -- logict >=0.6,
                        parsers >=0.5,
                        recursion-schemes >=3.0,
                        reducers >=3.0,
                        semigroups >=0.8,
                        tagged >= 0.4.4,
                        template-haskell,
                        transformers >= 0.3,
                        trifecta >= 1.0,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0,
                        wl-pprint-terminfo >=3.0

-- Executable drepl
--     Default-Language:   Haskell2010
--     Hs-Source-Dirs:     src
-- 
--     ghc-options:        -Wall
--                         -main-is Dyna.REPL
-- 
--     Build-Depends:      ansi-wl-pprint >= 0.6,
--                         base >=4,
--                         bytestring >=0.9,
--                         charset >=0.3,
--                         containers >=0.4,
--                         either >= 3.4,
--                         haskeline >=0.6,
--                         mtl >=2.1,
--                         lens >=3.8,
--                         parsers >=0.5,
--                         process >=1.1,
--                         recursion-schemes >=3.0,
--                         reducers >=3.0,
--                         semigroups >=0.8,
--                         tagged >= 0.4.4,
--                         transformers >= 0.3,
--                         trifecta >= 1.0,
--                         unordered-containers>=0.2,
--                         utf8-string >=0.3,
--                         wl-pprint-extras >=3.0
--     
--     Main-Is: Dyna/REPL.hs

Executable dyna

    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    ghc-options:        -Wall
                        -main-is Dyna.Main.Driver

    Build-Depends:      ansi-wl-pprint >= 0.6,
                        base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        either >= 3.4,
                        haskeline >=0.6,
                        ghc-prim,
                        HUnit >=1.2,
                        mtl >=2.1,
                        lens >=3.8,
                        -- logict >=0.6,
                        parsers >=0.5,
                        process >=1.1,
                        recursion-schemes >=3.0,
                        reducers >=3.0,
                        semigroups >=0.8,
                        tagged >= 0.4.4,
                        transformers >= 0.3,
                        trifecta >= 1.0,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0,
                        wl-pprint-terminfo >=3.0

    Main-Is: Dyna/Main/Driver.hs

Test-suite dyna-selftests
    type:               exitcode-stdio-1.0
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src

    ghc-options:        -Wall
                        -main-is Dyna.Main.TestsDriver

    Build-Depends:      ansi-wl-pprint >= 0.6,
                        base >=4,
                        bytestring >=0.9,
                        charset >=0.3,
                        containers >=0.4,
                        either >= 3.4,
                        ghc-prim,
                        HUnit >=1.2,
                        mtl >=2.1,
                        lens >=3.8,
                        -- logict >=0.6,
                        parsers >=0.5,
                        process >=1.1,
                        QuickCheck >= 2.5,
                        recursion-schemes >=3.0,
                        reducers >=3.0,
                        semigroups >=0.8,
                        smallcheck >= 1.0,
                        tagged >= 0.4.4,
                        template-haskell,
                        test-framework >=0.6,
                        test-framework-hunit >=0.2,
                        test-framework-quickcheck2 >=0.3,
                        test-framework-th >=0.2,
                        test-framework-golden >= 1.1,
                        transformers >= 0.3,
                        trifecta >= 1.0,
                        unordered-containers>=0.2,
                        utf8-string >=0.3,
                        wl-pprint-extras >=3.0,
                        wl-pprint-terminfo >=3.0

    Main-Is: Dyna/Main/TestsDriver.hs
